Stylesheet broke somehow

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Duke Nukem Forever 2001 Kanban</title>
-        <link rel="stylesheet" href="Stylesheet.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
 
     <body>
